--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 
 <script type="text/x-mathjax-config">   
 MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}}); </script>
-<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"> </script>
 
+
+
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
   </head>
 
   <body>
@@ -37,7 +41,7 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}}); </scrip
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p> Let's consider a Zeta function, defined as $\zeta(s) = \sum_{n=0}^{\infty}{\frac{1}{n^{s}}}$</p>
+<p> Let's consider a Zeta function, defined as $\zeta(s) = \sum_{n=0}^{\infty}{\frac{1}{n^{s}}}$, $$\zeta(s) = \sum_{n=0}^{\infty}{\frac{1}{n^{s}}}$$</p>
 
 <p> $$\sum_{k=0}^{\infty}{\frac{1}{k^{2}}}=\frac{\pi^{2}}{6}$$  This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
