--- a/index.html
+++ b/index.html
@@ -40,13 +40,17 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}}); </scrip
       <section id="main_content" class="inner">
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-<p> Welcome! This page is primaliry designed to be a place, where i can write the solutions down and share them for the pulic view, while the github pages seems to be very reasonably contructed for this purpose. So, well, let the first one be a small fact on the theory of self-adjoint operators, which i have found while going through the lecture notes on the course a take this semester.</p>
+<p> Welcome! This page is primrilry designed to be a place, where i can write the solutions down and share them for the pulic view, while the github pages seems to be very reasonably contructed for this purpose. So, well, let the first one be a small fact on the theory of self-adjoint operators, which i have found while going through the lecture notes on the course a take this semester.</p>
 <p>Let $X, Y$ be Hilbert spaces and let $T \in \mathcal{B}(X, Y)$ be a self-adjoint operator. I would like to prove that $||T|| = r(T)$ </p>
 
 <p> First, applying the C*-identity, we claim that $||T^{*}T||=||T||$, then by induction $||T^{2^{n}}||=||T||^{2^{n}}$. The next step is to apply the Berling formula: indeed $$r(T) = \lim_{n \to \infty}{||T^{n}||^{\frac{1}{n}}}=\lim_{n \to \infty}{||T^{2n}||^{\frac{1}{2n}}}=||T||$$</p>
 
+<p> Lemma: Let $A$ be a unital algebra and $a \in A$ be an idempotenent elements, i.e. satisfiying the $a^{2}=a$. Then the $\sigma(a) = \{0, 1 \}$. 
+Proof: Let's consider the $f(x) = x-x^{2}$, since the polynomial calculus preserves the spectrum, i.e. $\sigma(f(a))=f(\sigma(a))$, $\sigma(f(a))=\sigma(a-a^{2})=\sigma(0)=0$, on the other hand, $f(\sigma(a))=\sigma(a)-\sigma(a)^{2}=0$, then $\sigma(a) = \{0, 1 \}$.
+</p>
 
-
+<p> Theorem: (Schauder compactness theorem) 
+Let $T \in \mathcal{B}(X, Y)$, then $T$ is a compact operator iff $T^{*}$ (Banach adjoint) is a compact operator.</p>
 
       </section>
     </div>
