--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}}); </scrip
 <p> First, applying the C*-identity, we claim that $||T^{*}T||=||T||$, then by induction $||T^{2^{n}}||=||T||^{2^{n}}$. The next step is to apply the Berling formula: indeed $$r(T) = \lim_{n \to \infty}{||T^{n}||^{\frac{1}{n}}}=\lim_{n \to \infty}{||T^{2n}||^{\frac{1}{2n}}}=||T||$$</p>
 
 <p> Lemma: Let $A$ be a unital algebra and $a \in A$ be an idempotenent elements, i.e. satisfiying the $a^{2}=a$. Then the $\sigma(a) = \{0, 1 \}$. 
-Proof: Let's consider the $f(x) = x-x^{2}$. Since the polynomial calculus preserves the spectrum, i.e. $\sigma(f(a))=f(\sigma(a))$, $\sigma(f(a))=\sigma(a-a^{2})=\sigma(0)=0$, on the other hand, $f(\sigma(a))=\sigma(a)-\sigma(a)^{2}=0$, then $\sigma(a) = \{0, 1 \}$.
+Proof: Let's consider the $f(x) = x-x^{2}$ Since the polynomial calculus preserves the spectrum, i.e. $\sigma(f(a))=f(\sigma(a))$, $\sigma(f(a))=\sigma(a-a^{2})=\sigma(0)=0$, on the other hand, $f(\sigma(a))=\sigma(a)-\sigma(a)^{2}=0$, then $\sigma(a) = \{0, 1 \}$.
 </p>
 
 <p> Theorem: (Schauder compactness theorem) 
