--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}}); </scrip
       <section id="main_content" class="inner">
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-<p> Welcome! This page is primrilry designed to be a place, where i can write the solutions down and share them for the pulic view, while the github pages seems to be very reasonably contructed for this purpose. So, well, let the first one be a small fact on the theory of self-adjoint operators, which i have found while going through the lecture notes on the course a take this semester.</p>
+<p> Welcome! This page is primarily designed to be a place, where i can write the solutions down and share them for the pulic view, while the github pages seems to be very reasonably contructed for this purpose. So, well, let the first one be a small fact on the theory of self-adjoint operators, which i have found while going through the lecture notes on the course a take this semester.</p>
 <p>Let $X, Y$ be Hilbert spaces and let $T \in \mathcal{B}(X, Y)$ be a self-adjoint operator. I would like to prove that $||T|| = r(T)$ </p>
 
 <p> First, applying the C*-identity, we claim that $||T^{*}T||=||T||$, then by induction $||T^{2^{n}}||=||T||^{2^{n}}$. The next step is to apply the Berling formula: indeed $$r(T) = \lim_{n \to \infty}{||T^{n}||^{\frac{1}{n}}}=\lim_{n \to \infty}{||T^{2n}||^{\frac{1}{2n}}}=||T||$$</p>
