--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@ Let $T \in \mathcal{B}(X, Y)$, then $T$ is a compact operator iff $T^{*}$ (Banac
 <p> This is a small note regarding the classical Dini theorem, which establishes the condition in which pointwise convergence impies unifrom. </p>
 <p> <b> Dini theorem</b> Let $X$ be a compact metric space and let $\{ f_{n} \}$ be a monotonically increasing sequence ($f_{n}(x) \leq f_{n+1}(x))$ for each $x \in X$). Then if the pointwise limit is continuous, then the sequence converges uniformly. </p>
 <p> <b> Proof</b> Let $\epsilon > 0$ given. Let $g_{n} = f -f_{n}$ for each $n$ and let $E_{n}$ be a set of all $x$ such that $|g_{n}(x)| < \epsilon$. Since $g$ is continuous, then each $E_{n}$ is open. Since $f_{n}$ is monotonically increasing, then $g_{n}$ is decresing, then $\{ E_{n} \}$ is ascending. $\{E_{n} \}$ is an open cover of X, since $f_{n} \rightarrow f$ pointwise. Then, by compactness of $X$, there exists an finite subcover. Since $\{ E_{n} \}$ is ascending, then the biggest of all the elements of the cover is a cover of $X$, in other words, for some $N$ $\{E_{N}\}$ is a cover of $X$. Then, if $n > N, x \in X$, then $|f_{n}(x)-f(x)| < \epsilon$, as desired.</p>
+
+<h4> Baire category theorem</h4>
+<p> <a href="https://github.com/arteom37/arteom37.github.io/blob/master/Baire_category_theorem.html"> Look here!</a>  </p>
       </section>
     </div>
 
