--- a/test.html
+++ b/test.html
@@ -8,5 +8,5 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}}); </scrip
 
 <p> This page is designed to be a test one just to check how it does work </p>
 
-<h1> Montel's theorem</h1>
-<p> Let $\mathcal{F} = \{ f \}$ be a family of holomorphic functions. If $\mathcal{F}$ is uniformly bounded then it is compact</p>
+
+<p> Let $\mathcal{F} = \{ f \}$ be a family of holomorphic functions. If $\mathcal{F}$ is uniformly bounded then it is compact. </p>
