--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
+<script type="text/x-mathjax-config">   
+MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}}); </script>
+
+
+
+<script type="text/javascript" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+
 <html>
    <body>
-      <h1>This page is under reconstriction. Probably, it will be complete in several days.</h1>
+      <h1>This page is under reconstriction. </h1>
    </body>
 </html>
