--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}}); </scrip
 
 <html>
    <body>
-      <h1>This page is under reconstriction. </h1>
+      <h1>This page is under reconstruction </h1>
    </body>
 </html>
