--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}}); </scrip
 
 <html>
    <body>
-      <h1>This page is under reconstruction </h1>
-      
-   </body>
+      <h1>This page is under reconstruction now </h1>
+    </body>
 </html>
