--- a/monge-ampere.html
+++ b/monge-ampere.html
@@ -17,7 +17,7 @@ Let $d\mu = f(x) dx$ and $d \nu = g(y) dy$ be two probability densities. It's kn
 for any $b \in C_{b}{(\mathbb{R}^{n})}$ $$\int{b(y)g(y) dy} = \int{b(\nabla \psi(x)) f(x) dx}$$. Assume that $\psi \rightarrow \nabla \psi$ is a smooth (or at least $C^{2}$) and 1-1 map. 
 Then we can proceed the coordinate transform $y = \nabla \psi$.
 
-The left-hand side is rewritted as $\int{b(\nabla \psi) g(\nabla \psi) \text{det}(D^{2} \psi) dy$, then we obtain that $$\text{det}{D^{2} \psi} = \frac{g(\nabla \psi)}{f(x)}$$. 
+The left-hand side is rewritted as $\int{b(\nabla \psi) g(\nabla \psi) \text{det}(D^{2} \psi) dy}$, then we obtain that $$\text{det}{D^{2} \psi} = \frac{g(\nabla \psi)}{f(x)}$$. 
     </body>
 </html>
 Contact GitHub API Training Shop Blog About
