--- a/trace.html
+++ b/trace.html
@@ -10,6 +10,6 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}}); </scrip
 
 <html>
    <body>
-\| A \|_{1} = \text{Tr}{|A|} := \sum{< (A*A)^{\frac{1}{2}}e_{k}, e_{k} >}
+$$ \| A \|_{1} = \text{Tr}{|A|} := \sum{< (A*A)^{\frac{1}{2}}e_{k}, e_{k} >}$$
     </body>
 </html>
