--- a/trace.html
+++ b/trace.html
@@ -10,6 +10,8 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}}); </scrip
 
 <html>
    <body>
-$ \| A \|_{1} = \text{Tr}{|A|} := \sum{< (A^{*}A)^{\frac{1}{2}}e_{k}, e_{k} >}$
+Trace of a trace-class operator $ \| A \|_{1} = \text{Tr}{|A|} := \sum{\langle (A^{*}A)^{\frac{1}{2}}e_{k}, e_{k} \rangle}$.
+Divergence of a vector field $X$ is defined as follows $\div{X} = -\sum_{i=1}^{n}{\langle \nabla_{e_{i}}{X}, e_{i} \rangle}$.
+Ito isometry: $\mathbb{E}{\left( \left[ \int_{0}^{t}{f(w, s) ds \right] ^{2} \right) = \mathbb \left( \int_{0}^{t}{f^{2}(w, s} ds \right)$
     </body>
 </html>
